--- a/templates/photo.html
+++ b/templates/photo.html
@@ -7,12 +7,20 @@
 
 {% block content %}
 <div class='container'>
-    <div class="h-auto d-inline-block align-top" style="width: 120px; background-color: rgba(0,0,255,.1)">
-        {% for item in object_list %}
-        <a href={{ item.link }}>
-        <img src='{{ item.images.url }}'></a>
-        {% endfor %}
+    {% for item in object_list %}
+    <div class="card" style="width: auto;">
+        <a href="{{ item.link }}">
+        <img class="card-img-top" src="{{ item.images.url }}" alt="Card image cap">
+        </a>
+        <div class="card-body">
+            <p class="card-text">{{ item.summary }}</p>
+            <a href="{{ item.blog_url }}">
+                <p class="card-text">Posted by {{ item.blog_name }}</p>
+            </a>
+          
+        </div>
+      </div>
+    {% endfor %}
 
-    </div>
 </div>
 {% endblock content %}
