--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
+    <link rel="icon" type="image/png" href="../static/icon/ra.png">
     {% block customcss %}
     {% endblock customcss %}
-    <title>ダッシュボード人気ランキング</title>
+    <title>{% block title %}ラ！{% endblock title %}</title>
   </head>
   <body>
     {% block header %}
